# nwhex

./: CMakeLists.txt  Cargo.toml  README.md
src/: args.c  args.h  args.rs  help.c  help.h  hex.c  hex.h  hex.rs  main.c  main.rs  settings.h  version.h
